<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BeRoads</string>
    <string name="txt_connection">Please check your Internet connection.</string>
    <string name="txt_location">If you cannot get GPS position, please enable it by
		clicking here.</string>
    <string name="lan">fr</string>
    <string name="zoom">Zoom on the event to display it</string>
    <string name="alphabet">Alphabet</string>
    <string name="region">Area</string>
    <string name="svTitle">StreetView not installed</string>
    <string name="svMessage">Please install Google StreetView to have a look at the radar</string>
    <string name="noMarket">Sorry, cannot detect Android Market</string>
    <string name="menuMap">Map</string>
    <string name="menuTraffic">Traffic</string>
    <string name="menuRadar">Radars</string>
    <string name="menuWeather">Weather</string>
    <string name="menuCameras">Webcam</string>
    <string name="menuAbout">About</string>
    <string name="getLoc">Click here to improve your location.</string>

</resources>