<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="6dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            style="@style/HomeButton"
            android:drawableTop="@drawable/home_btn_map"
            android:onClick="onMapClick"
            android:text="@string/menuMap" />

        <Button
            style="@style/HomeButton"
            android:drawableTop="@drawable/home_btn_work"
            android:onClick="onTrafficClick"
            android:text="@string/menuTraffic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            style="@style/HomeButton"
            android:drawableTop="@drawable/home_btn_radar"
            android:onClick="onRadarClick"
            android:text="@string/menuRadar" />

        <Button
            style="@style/HomeButton"
            android:drawableTop="@drawable/home_btn_cam"
            android:onClick="onCameraClick"
            android:text="@string/menuCameras" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            style="@style/HomeButton"
            android:drawableTop="@drawable/home_btn_weather"
            android:onClick="onWeatherClick"
            android:text="@string/menuWeather" />

        <Button
            style="@style/HomeButton"
            android:drawableTop="@drawable/home_btn_default"
            android:onClick="onAboutClick"
            android:text="@string/menuAbout" />
    </LinearLayout>

</LinearLayout>